# athena-reader

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/agents/: code-review-agent.md  design-review-agent.md
.github/workflows/: release.yml
athena-app/: Cargo.toml
athena-app/src/: main.rs
athena-core/: Cargo.toml
athena-core/src/: epub.rs  lib.rs  model_utils.rs  ocr.rs  reader.rs  settings.rs  text.rs
notes/: specification.md
