[package]
name = "athena-core"
version = "0.3.0"
edition = "2024"

[dependencies]
epub-stream = { git = "https://github.com/h0rv/epub-stream", branch = "main" }
image = "0.25"
oar-ocr = "0.6.1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ureq = "2"
